// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageValidator has the expected html structure 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <div
          class="tm-page-header-title"
        >
          <h2>
            Validator
          </h2>
        </div>
        <div
          class="tm-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a
                    class=""
                    href="#/staking"
                  >
                    <i
                      class="material-icons"
                    >
                      arrow_back
                    </i>
                  </a>
                  <a
                    class="anchor-copy"
                  >
                    <i
                      class="material-icons"
                    >
                      content_copy
                    </i>
                    
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main ps"
  >
    <section
      class="tm-part"
    >
      <div
        class="tm-part-container"
      >
        <header
          class="tm-part-header"
        >
          <div
            class="tm-part-header-container"
          >
            <div
              class="tm-part-title h5"
            >
              !!! CRITICAL ALERT !!!
            </div>
            <menu
              class="tm-part-menu"
            />
          </div>
        </header>
        <main
          class="tm-part-main"
        >
          <a
            class="tm-li tm-li-link"
            href="https://cosmos.network/docs/validators/validator-setup.html#common-problems"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-label"
              >
                <div
                  class="tm-li-title"
                >
                  This validator is revoked!
                </div>
                <div
                  class="tm-li-subtitle"
                >
                  Are you the owner? Go fix it!
                </div>
              </div>
              <div
                class="tm-li-icon"
              >
                <i
                  class="material-icons inactive"
                >
                  chevron_right
                </i>
                <i
                  class="material-icons active"
                >
                  my_location
                </i>
              </div>
            </div>
          </a>
        </main>
      </div>
    </section>
    <section
      class="tm-part"
      id="validator-profile"
    >
      <div
        class="tm-part-container"
      >
        <header
          class="tm-part-header"
        >
          <div
            class="tm-part-header-container"
          >
            <div
              class="tm-part-title h5"
            >
              Validator Profile
            </div>
            <menu
              class="tm-part-menu"
            />
          </div>
        </header>
        <main
          class="tm-part-main"
        >
          <img
            class="avatar"
            height="192"
            src="~assets/images/validator-icon.svg"
            width="192"
          />
          <div
            class="list-items"
          >
            <div
              class="tm-li"
            >
              <div
                class="tm-li-container"
              >
                <div
                  class="tm-li-thumb"
                >
                  <!---->
                </div>
                <div
                  class="tm-li-dl"
                >
                  <div
                    class="tm-li-dt"
                  >
                    Moniker
                  </div>
                  <div
                    class="tm-li-dd"
                  >
                    herr_schmidt_revoked
                  </div>
                </div>
              </div>
            </div>
            <a
              class="tm-li tm-li-link"
              href="https://cosmos.network/docs/validators/validator-setup.html#edit-validator-description"
              target="_blank"
            >
              <div
                class="tm-li-container"
              >
                <div
                  class="tm-li-thumb"
                >
                  <!---->
                </div>
                <div
                  class="tm-li-dl"
                >
                  <div
                    class="tm-li-dt"
                  >
                    Identity
                  </div>
                  <div
                    class="tm-li-dd"
                  >
                    add your avatar
                  </div>
                </div>
                <div
                  class="tm-li-icon"
                >
                  <i
                    class="material-icons inactive"
                  >
                    chevron_right
                  </i>
                  <i
                    class="material-icons active"
                  >
                    my_location
                  </i>
                </div>
              </div>
            </a>
            <div
              class="tm-li"
            >
              <div
                class="tm-li-container"
              >
                <div
                  class="tm-li-thumb"
                >
                  <!---->
                </div>
                <div
                  class="tm-li-dl"
                >
                  <div
                    class="tm-li-dt"
                  >
                    Website
                  </div>
                  <div
                    class="tm-li-dd"
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              class="tm-li"
            >
              <div
                class="tm-li-container"
              >
                <div
                  class="tm-li-thumb"
                >
                  <!---->
                </div>
                <div
                  class="tm-li-dl"
                >
                  <div
                    class="tm-li-dt"
                  >
                    Details
                  </div>
                  <div
                    class="tm-li-dd"
                  >
                    
                  </div>
                </div>
              </div>
            </div>
          </div>
        </main>
      </div>
    </section>
    <section
      class="tm-part"
    >
      <div
        class="tm-part-container"
      >
        <header
          class="tm-part-header"
        >
          <div
            class="tm-part-header-container"
          >
            <div
              class="tm-part-title h5"
            >
              Validator Keys
            </div>
            <menu
              class="tm-part-menu"
            />
          </div>
        </header>
        <main
          class="tm-part-main"
        >
          <div
            class="tm-li"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  Owner
                </div>
                <div
                  class="tm-li-dd"
                >
                  1a2b3c
                </div>
              </div>
            </div>
          </div>
          <div
            class="tm-li"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  Pub Key
                </div>
                <div
                  class="tm-li-dd"
                >
                  {
  "type": "AC26791624DE60",
  "data": "dlN5SLqeT3LT9WsUK5iuVq1eLQV2Q1JQAuyN0VwSWK0="
}
                </div>
              </div>
            </div>
          </div>
        </main>
      </div>
    </section>
    <!---->
    <section
      class="tm-part"
    >
      <div
        class="tm-part-container"
      >
        <header
          class="tm-part-header"
        >
          <div
            class="tm-part-header-container"
          >
            <div
              class="tm-part-title h5"
            >
              Commission
            </div>
            <menu
              class="tm-part-menu"
            />
          </div>
        </header>
        <main
          class="tm-part-main"
        >
          <div
            class="tm-li"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  Commission
                </div>
                <div
                  class="tm-li-dd"
                >
                  0
                </div>
              </div>
            </div>
          </div>
          <div
            class="tm-li"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  Commission Maximum
                </div>
                <div
                  class="tm-li-dd"
                >
                  0
                </div>
              </div>
            </div>
          </div>
          <div
            class="tm-li"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  Commission Change-Rate
                </div>
                <div
                  class="tm-li-dd"
                >
                  0
                </div>
              </div>
            </div>
          </div>
          <div
            class="tm-li"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  Commission Change-Rate Today
                </div>
                <div
                  class="tm-li-dd"
                >
                  0
                </div>
              </div>
            </div>
          </div>
        </main>
      </div>
    </section>
    <div
      class="ps__rail-x"
      style="left: 0px; top: 0px;"
    >
      <div
        class="ps__thumb-x"
        style="left: 0px; width: 0px;"
        tabindex="0"
      />
    </div>
    <div
      class="ps__rail-y"
      style="top: 0px; left: 0px;"
    >
      <div
        class="ps__thumb-y"
        style="top: 0px; height: 0px;"
        tabindex="0"
      />
    </div>
  </main>
</div>
`;

exports[`PageValidator shows a default avatar 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <div
          class="tm-page-header-title"
        >
          <h2>
            Validator
          </h2>
        </div>
        <div
          class="tm-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a
                    class=""
                    href="#/staking"
                  >
                    <i
                      class="material-icons"
                    >
                      arrow_back
                    </i>
                  </a>
                  <a
                    class="anchor-copy"
                  >
                    <i
                      class="material-icons"
                    >
                      content_copy
                    </i>
                    
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main"
  >
    <section
      class="tm-part"
    >
      <div
        class="tm-part-container"
      >
        <header
          class="tm-part-header"
        >
          <div
            class="tm-part-header-container"
          >
            <div
              class="tm-part-title h5"
            >
              !!! CRITICAL ALERT !!!
            </div>
            <menu
              class="tm-part-menu"
            />
          </div>
        </header>
        <main
          class="tm-part-main"
        >
          <a
            class="tm-li tm-li-link"
            href="https://cosmos.network/docs/validators/validator-setup.html#common-problems"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-label"
              >
                <div
                  class="tm-li-title"
                >
                  This validator is revoked!
                </div>
                <div
                  class="tm-li-subtitle"
                >
                  Are you the owner? Go fix it!
                </div>
              </div>
              <div
                class="tm-li-icon"
              >
                <i
                  class="material-icons inactive"
                >
                  chevron_right
                </i>
                <i
                  class="material-icons active"
                >
                  my_location
                </i>
              </div>
            </div>
          </a>
        </main>
      </div>
    </section>
    <section
      class="tm-part"
      id="validator-profile"
    >
      <div
        class="tm-part-container"
      >
        <header
          class="tm-part-header"
        >
          <div
            class="tm-part-header-container"
          >
            <div
              class="tm-part-title h5"
            >
              Validator Profile
            </div>
            <menu
              class="tm-part-menu"
            />
          </div>
        </header>
        <main
          class="tm-part-main"
        >
          <img
            class="avatar"
            height="192"
            src="~assets/images/validator-icon.svg"
            width="192"
          />
          <div
            class="list-items"
          >
            <div
              class="tm-li"
            >
              <div
                class="tm-li-container"
              >
                <div
                  class="tm-li-thumb"
                >
                  <!---->
                </div>
                <div
                  class="tm-li-dl"
                >
                  <div
                    class="tm-li-dt"
                  >
                    Moniker
                  </div>
                  <div
                    class="tm-li-dd"
                  >
                    herr_schmidt_revoked
                  </div>
                </div>
              </div>
            </div>
            <a
              class="tm-li tm-li-link"
              href="https://cosmos.network/docs/validators/validator-setup.html#edit-validator-description"
              target="_blank"
            >
              <div
                class="tm-li-container"
              >
                <div
                  class="tm-li-thumb"
                >
                  <!---->
                </div>
                <div
                  class="tm-li-dl"
                >
                  <div
                    class="tm-li-dt"
                  >
                    Identity
                  </div>
                  <div
                    class="tm-li-dd"
                  >
                    add your avatar
                  </div>
                </div>
                <div
                  class="tm-li-icon"
                >
                  <i
                    class="material-icons inactive"
                  >
                    chevron_right
                  </i>
                  <i
                    class="material-icons active"
                  >
                    my_location
                  </i>
                </div>
              </div>
            </a>
            <div
              class="tm-li"
            >
              <div
                class="tm-li-container"
              >
                <div
                  class="tm-li-thumb"
                >
                  <!---->
                </div>
                <div
                  class="tm-li-dl"
                >
                  <div
                    class="tm-li-dt"
                  >
                    Website
                  </div>
                  <div
                    class="tm-li-dd"
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              class="tm-li"
            >
              <div
                class="tm-li-container"
              >
                <div
                  class="tm-li-thumb"
                >
                  <!---->
                </div>
                <div
                  class="tm-li-dl"
                >
                  <div
                    class="tm-li-dt"
                  >
                    Details
                  </div>
                  <div
                    class="tm-li-dd"
                  >
                    
                  </div>
                </div>
              </div>
            </div>
          </div>
        </main>
      </div>
    </section>
    <section
      class="tm-part"
    >
      <div
        class="tm-part-container"
      >
        <header
          class="tm-part-header"
        >
          <div
            class="tm-part-header-container"
          >
            <div
              class="tm-part-title h5"
            >
              Validator Keys
            </div>
            <menu
              class="tm-part-menu"
            />
          </div>
        </header>
        <main
          class="tm-part-main"
        >
          <div
            class="tm-li"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  Owner
                </div>
                <div
                  class="tm-li-dd"
                >
                  1a2b3c
                </div>
              </div>
            </div>
          </div>
          <div
            class="tm-li"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  Pub Key
                </div>
                <div
                  class="tm-li-dd"
                >
                  {
  "type": "AC26791624DE60",
  "data": "dlN5SLqeT3LT9WsUK5iuVq1eLQV2Q1JQAuyN0VwSWK0="
}
                </div>
              </div>
            </div>
          </div>
        </main>
      </div>
    </section>
    <!---->
    <section
      class="tm-part"
    >
      <div
        class="tm-part-container"
      >
        <header
          class="tm-part-header"
        >
          <div
            class="tm-part-header-container"
          >
            <div
              class="tm-part-title h5"
            >
              Commission
            </div>
            <menu
              class="tm-part-menu"
            />
          </div>
        </header>
        <main
          class="tm-part-main"
        >
          <div
            class="tm-li"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  Commission
                </div>
                <div
                  class="tm-li-dd"
                >
                  0
                </div>
              </div>
            </div>
          </div>
          <div
            class="tm-li"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  Commission Maximum
                </div>
                <div
                  class="tm-li-dd"
                >
                  0
                </div>
              </div>
            </div>
          </div>
          <div
            class="tm-li"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  Commission Change-Rate
                </div>
                <div
                  class="tm-li-dd"
                >
                  0
                </div>
              </div>
            </div>
          </div>
          <div
            class="tm-li"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  Commission Change-Rate Today
                </div>
                <div
                  class="tm-li-dd"
                >
                  0
                </div>
              </div>
            </div>
          </div>
        </main>
      </div>
    </section>
  </main>
</div>
`;
